now using consistent mailto 'MyStarID'

--- a/default.html
+++ b/default.html
@@ -33,7 +33,7 @@
     <div class="row col-lg-12">
         <div class="col-lg-5 h2 text-primary">
             <!-- Replace USERNAME with your WSU network username in the line below   GROK -->
-            <a href="mailto:you@go.minnstate.edu?subject=MIS452AssignmentFeedback&amp;cc=ppaulson@winona.edu;brody.dunsmoor@go.winona.edu;hbrosious16@winona.edu&amp;body=For%20assistance%20correcting%20any%20errors%20please%20contact%20a%20course%20TA" class="bg-info text-white">
+            <a href="mailto:MyStarID@go.minnstate.edu?subject=MIS452AssignmentFeedback&amp;cc=ppaulson@winona.edu;brody.dunsmoor@go.winona.edu;hbrosious16@winona.edu&amp;body=For%20assistance%20correcting%20any%20errors%20please%20contact%20a%20course%20TA" class="bg-info text-white">
 
                 <!-- PgP 6/15/2019 scirpted First Name  -->
                 Email to 
