updated comments to constants file, added IoT assignments, Project 4, to homepage

--- a/default.html
+++ b/default.html
@@ -104,69 +104,69 @@
                 <td>3</td>
                 <td>9/16/19</td>
                 <td>Summative01</td>
-                <td>&nbsp;</td>
+                <td>Project04-IOTP01</td>
             </tr>
             <tr>
                 <td>4</td>
                 <td>9/23/19</td>
                 <td>Summative02</td>
-                <td>&nbsp;</td>
+                <td>Project04-IOTP02</td>
             </tr>
             <tr>
                 <td>5</td>
                 <td>9/30/19</td>
                 <td>Summative03</td>
-                <td>&nbsp;</td>
+                <td>Project04-IOTP03</td>
             </tr>
             <tr>
                 <td>6</td>
-                <td>10/6/19</td>
+                <td>10/7/19</td>
                 <td>Summative04</td>
-                <td>&nbsp;</td>
+                <td>Project04-IOTA01</td>
             </tr>
             <tr>
                 <td>7</td>
                 <td>10/14/19</td>
                 <td>Summative05</td>
-                <td>&nbsp;</td>
+                <td>Project04-IOTB01</td>
             </tr>
             <tr>
                 <td>8</td>
                 <td>10/21/19</td>
                 <td>Summative06</td>
-                <td>&nbsp;</td>
+                <td>Project04-IOT01</td>
             </tr>
             <tr>
                 <td>9</td>
                 <td>10/28/19</td>
                 <td>Summative07<br />
                     Summative08</td>
-                <td>&nbsp;</td>
+                <td>Project04-IOT02</td>
             </tr>
             <tr>
                 <td>10</td>
                 <td>11/4/19</td>
                 <td>Summative09<br />
                     Summative10</td>
-                <td>&nbsp;</td>
+                <td>Project04-IOT03</td>
             </tr>
             <tr>
                 <td>11</td>
                 <td>11/11/19</td>
                 <td>Summative11</td>
-                <td>&nbsp;</td>
+                <td>Project04-IOT04</td>
             </tr>
             <tr>
                 <td>12</td>
                 <td>11/18/19</td>
                 <td>Summative12</td>
-                <td>&nbsp;</td>
+                <td>Project04-IOT05</td>
             </tr>
             <tr>
                 <td>13</td>
                 <td>11/25/19</td>
                 <td>Summative13</td>
-                <td>&nbsp;</td>
+                <td>Project04-IOT06</td>
             </tr>
             <tr>
                 <td>14</td>
